--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,52 @@
+@import url('https://fonts.googleapis.com/css2?family=Belanosima&family=DM+Sans&family=Gideon+Roman&family=Jost&family=Lato&family=Lexend:wght@400;500&family=Manrope&family=Noto+Color+Emoji&display=swap');
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+}
+
+html {
+  box-shadow: inset 0 0 100px #ebd78d, inset 0 0 80px #8f6847;
+  height: 100%;
+}
+
+body {
+  font-family: 'Gideon Roman', cursive;
+  background-color: #f8f5de;
+}
+
+h1 {
+  display: flex;
+  justify-content: center;
+  margin: 2rem;
+  color: #382312;
+}
+
+.container {
+  padding: 2rem;
+  margin: 6.5rem auto;
+  width: 30%;
+  background-color: #f8f5de;
+  border: 1px solid #382312;
+  box-shadow: 2px 2px 4px #b69071;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 0.8rem;
+  border-radius: 1%;
+}
+
+.container p {
+  text-align: center;
+  font-weight: 500;
+}
+
+.container button {
+  padding: 0.6rem 1rem;
+  background-color: #382312;
+  color: #f8f5de;
+  outline: none;
+  border: none;
 }
